[gd_scene load_steps=24 format=3 uid="uid://qdsqyuhkot4q"]

[ext_resource type="Script" uid="uid://d4a1n3u43ew2w" path="res://Assets/Scripts/level_editor.gd" id="1_arng6"]
[ext_resource type="Texture2D" uid="uid://bhmfi2wjql7v4" path="res://Assets/Sprites/tiles/grey_wall.png" id="2_arng6"]
[ext_resource type="Texture2D" uid="uid://cr0vlyc7xfytw" path="res://Assets/Sprites/tiles/blue_wall.png" id="3_21ir5"]
[ext_resource type="Texture2D" uid="uid://flxyy20qw1ua" path="res://Assets/Sprites/tiles/bush.png" id="4_rnpc0"]
[ext_resource type="Texture2D" uid="uid://dxntjpr8pgwpy" path="res://Assets/Sprites/tiles/door.png" id="5_21ir5"]
[ext_resource type="Texture2D" uid="uid://d1thi7he8fq4x" path="res://Assets/Sprites/tiles/floor.png" id="5_p7mrj"]
[ext_resource type="Texture2D" uid="uid://b6k52i0hyc6ig" path="res://Assets/Sprites/tiles/grass.png" id="6_olh06"]
[ext_resource type="Texture2D" uid="uid://cc5k1bxanktbk" path="res://Assets/Sprites/tiles/health_regenerator.png" id="8_rnpc0"]
[ext_resource type="Texture2D" uid="uid://b0jvato78q0d" path="res://Assets/Sprites/pickups/ammo_pickup.png" id="9_olh06"]
[ext_resource type="Texture2D" uid="uid://d1qejfrgnqgvd" path="res://Assets/Sprites/pickups/health_pickup.png" id="10_vmkot"]
[ext_resource type="Texture2D" uid="uid://bhfv1rnk0u5sf" path="res://Assets/Sprites/pickups/key_pickup.png" id="11_3ngkp"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_arng6"]
texture = ExtResource("2_arng6")
0:0/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_rnpc0"]
texture = ExtResource("3_21ir5")
0:0/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_p7mrj"]
texture = ExtResource("4_rnpc0")
0:0/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_olh06"]
texture = ExtResource("5_21ir5")
0:0/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_vmkot"]
texture = ExtResource("5_p7mrj")
0:0/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_3ngkp"]
texture = ExtResource("6_olh06")
0:0/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_u2ius"]
texture = ExtResource("8_rnpc0")
0:0/0 = 0

[sub_resource type="TileSet" id="TileSet_21ir5"]
sources/0 = SubResource("TileSetAtlasSource_arng6")
sources/1 = SubResource("TileSetAtlasSource_rnpc0")
sources/2 = SubResource("TileSetAtlasSource_p7mrj")
sources/3 = SubResource("TileSetAtlasSource_olh06")
sources/4 = SubResource("TileSetAtlasSource_vmkot")
sources/5 = SubResource("TileSetAtlasSource_3ngkp")
sources/6 = SubResource("TileSetAtlasSource_u2ius")

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_p3ipa"]
texture = ExtResource("9_olh06")

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_k5u3g"]
texture = ExtResource("10_vmkot")

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_0eccv"]
texture = ExtResource("11_3ngkp")

[sub_resource type="TileSet" id="TileSet_c4u8i"]
sources/0 = SubResource("TileSetAtlasSource_p3ipa")
sources/1 = SubResource("TileSetAtlasSource_k5u3g")
sources/2 = SubResource("TileSetAtlasSource_0eccv")

[node name="LevelEditor" type="Control"]
layout_mode = 3
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -320.0
offset_top = -200.0
grow_horizontal = 0
grow_vertical = 0
size_flags_horizontal = 8
script = ExtResource("1_arng6")

[node name="TileMapLayer" type="TileMapLayer" parent="."]
tile_map_data = PackedByteArray(0, 0, 0, 0, 7, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 6, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 5, 0, 0, 0, 0, 0, 0, 0, 0, 0)
tile_set = SubResource("TileSet_21ir5")

[node name="MarkersLayer" type="TileMapLayer" parent="."]
tile_map_data = PackedByteArray(0, 0, 0, 0, 7, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 6, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 5, 0, 0, 0, 0, 0, 0, 0, 0, 0)
tile_set = SubResource("TileSet_c4u8i")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
offset_top = 160.0
offset_right = 320.0
offset_bottom = 200.0
color = Color(0.100439, 0.337708, 1, 1)

[node name="TileSelectorLabel" type="Label" parent="CanvasLayer/ColorRect"]
layout_mode = 0
offset_left = 12.3167
offset_top = 1.48206
offset_right = 48.3167
offset_bottom = 16.4821
theme_override_font_sizes/font_size = 10
text = "Tile"
horizontal_alignment = 1
uppercase = true

[node name="TileSelector" type="OptionButton" parent="CanvasLayer/ColorRect/TileSelectorLabel"]
unique_name_in_owner = true
layout_mode = 2
offset_left = -10.6638
offset_top = 13.7356
offset_right = 46.3362
offset_bottom = 37.7356
grow_horizontal = 2
size_flags_horizontal = 0
size_flags_vertical = 8
focus_mode = 0
theme_override_font_sizes/font_size = 1
item_count = 7
popup/item_0/text = "Barriers"
popup/item_0/id = 5
popup/item_0/separator = true
popup/item_1/text = "Grey Wall"
popup/item_1/icon = ExtResource("2_arng6")
popup/item_1/id = 1
popup/item_2/text = "Blue Wall"
popup/item_2/icon = ExtResource("3_21ir5")
popup/item_2/id = 2
popup/item_3/text = "Bush"
popup/item_3/icon = ExtResource("4_rnpc0")
popup/item_3/id = 3
popup/item_4/text = "Ground"
popup/item_4/id = 4
popup/item_4/separator = true
popup/item_5/text = "Tile Floor"
popup/item_5/icon = ExtResource("5_p7mrj")
popup/item_5/id = 4
popup/item_6/text = "Grass"
popup/item_6/icon = ExtResource("6_olh06")
popup/item_6/id = 5

[node name="PickupSelectorLabel" type="Label" parent="CanvasLayer/ColorRect"]
layout_mode = 0
offset_left = 88.6027
offset_top = 0.230453
offset_right = 162.603
offset_bottom = 14.2305
scale = Vector2(1.04268, 1.02895)
theme_override_font_sizes/font_size = 10
text = "Pickup/Entity"
horizontal_alignment = 1
uppercase = true

[node name="PickupSelector" type="OptionButton" parent="CanvasLayer/ColorRect/PickupSelectorLabel"]
unique_name_in_owner = true
layout_mode = 2
offset_left = 8.14405
offset_top = 13.7407
offset_right = 65.1441
offset_bottom = 37.7407
grow_horizontal = 2
size_flags_horizontal = 0
size_flags_vertical = 8
focus_mode = 0
theme_override_font_sizes/font_size = 1
item_count = 7
popup/item_0/text = "Barriers"
popup/item_0/id = 5
popup/item_0/separator = true
popup/item_1/text = "Grey Wall"
popup/item_1/icon = ExtResource("2_arng6")
popup/item_1/id = 1
popup/item_2/text = "Blue Wall"
popup/item_2/icon = ExtResource("3_21ir5")
popup/item_2/id = 2
popup/item_3/text = "Bush"
popup/item_3/icon = ExtResource("4_rnpc0")
popup/item_3/id = 3
popup/item_4/text = "Ground"
popup/item_4/id = 4
popup/item_4/separator = true
popup/item_5/text = "Tile Floor"
popup/item_5/icon = ExtResource("5_p7mrj")
popup/item_5/id = 4
popup/item_6/text = "Grass"
popup/item_6/icon = ExtResource("6_olh06")
popup/item_6/id = 5

[node name="CurrentScreenCoords" type="Label" parent="CanvasLayer/ColorRect"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 296.349
offset_top = 0.21611
offset_right = 319.349
offset_bottom = 17.2161
theme_override_font_sizes/font_size = 12
text = "0,0"
horizontal_alignment = 1

[node name="ChangeScreemButtons" type="HBoxContainer" parent="CanvasLayer/ColorRect/CurrentScreenCoords"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -63.0
offset_top = 0.289658
offset_right = -1.0
offset_bottom = 21.2897
grow_horizontal = 0
grow_vertical = 0
theme_override_constants/separation = 2

[node name="LeftButton" type="Button" parent="CanvasLayer/ColorRect/CurrentScreenCoords/ChangeScreemButtons"]
unique_name_in_owner = true
layout_mode = 2
focus_mode = 0
theme_override_font_sizes/font_size = 9
text = "˂"

[node name="RightButton" type="Button" parent="CanvasLayer/ColorRect/CurrentScreenCoords/ChangeScreemButtons"]
unique_name_in_owner = true
layout_mode = 2
focus_mode = 0
theme_override_font_sizes/font_size = 9
text = "˃"

[node name="UpButton" type="Button" parent="CanvasLayer/ColorRect/CurrentScreenCoords/ChangeScreemButtons"]
unique_name_in_owner = true
layout_mode = 2
focus_mode = 0
theme_override_font_sizes/font_size = 9
text = "˄"

[node name="DownButton" type="Button" parent="CanvasLayer/ColorRect/CurrentScreenCoords/ChangeScreemButtons"]
unique_name_in_owner = true
layout_mode = 2
focus_mode = 0
theme_override_font_sizes/font_size = 9
text = "˅"

[node name="FillScreenButton" type="Button" parent="CanvasLayer/ColorRect"]
layout_mode = 0
offset_left = 60.0
offset_top = 15.0
offset_right = 84.0
offset_bottom = 39.0
focus_mode = 0
theme_override_font_sizes/font_size = 8
text = "FILL
"

[connection signal="item_selected" from="CanvasLayer/ColorRect/TileSelectorLabel/TileSelector" to="." method="_on_tile_selected"]
[connection signal="item_selected" from="CanvasLayer/ColorRect/PickupSelectorLabel/PickupSelector" to="." method="_on_pickup_selected"]
[connection signal="pressed" from="CanvasLayer/ColorRect/CurrentScreenCoords/ChangeScreemButtons/LeftButton" to="." method="_on_left_pressed"]
[connection signal="pressed" from="CanvasLayer/ColorRect/CurrentScreenCoords/ChangeScreemButtons/RightButton" to="." method="_on_right_pressed"]
[connection signal="pressed" from="CanvasLayer/ColorRect/CurrentScreenCoords/ChangeScreemButtons/UpButton" to="." method="_on_up_pressed"]
[connection signal="pressed" from="CanvasLayer/ColorRect/CurrentScreenCoords/ChangeScreemButtons/DownButton" to="." method="_on_down_pressed"]
[connection signal="pressed" from="CanvasLayer/ColorRect/FillScreenButton" to="." method="_on_fill_screen_button_pressed"]
